# runpandarun

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python.yml  release.yml
datastore/: __init__.py  config.py  dataset.py  exceptions.py  ops.py  storage.py  store.py
example/: README.md  config.yml  google_api.yml  rki.json  rki.yml  rki_json.yml  rki_remote.yml  testdata.json
example/corona-hopkins/: README.md
runpandarun/: __init__.py  cli.py  columns.py  combine.py  config.py  datapatch.py  dataset.py  exceptions.py  fetch.py  index.py  io.py  load.py  ops.py  paginate.py  playbook.py  publish.py  revisions.py  storage.py  store.py  types.py  util.py
runpandarun/logic/: __init__.py  columns.py  index.py  ops.py
runpandarun/storage/: __init__.py  backend.py  filesystem.py  gcloud.py  storage.py
tests/: conftest.py  test_cli.py  test_datastore.py  test_fetch.py  test_gcloud.py  test_import.py  test_io.py  test_json.py  test_pagination.py  test_playbook.py  test_publish.py  test_revisions.py  test_spec.py  test_yaml_env.py  util.py
tests/fixtures/: applymap.yml  applymap_evil.yml  google_api.yml  google_spreadsheet.yml  json.yml  lobbyregister.json  lobbyregister.yml  rki.json  rki.yml  rki_json.yml  spec.yml  testdata.csv  testdata.json  testdata_transformed.csv  url_replace.yml
