[project]
name = "runpandarun"
version = "0.5.3"
description = "Tell pandas what to do – easy tabular data I/O playbooks"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "MIT"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10,<4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "typer (>0.15)",
    "banal (>=1.0.6,<2.0.0)",
    "normality (>=2.6.1,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "datapatch (>=1.2.3,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pyicu (>=2.15.2,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "s3fs (>=2025.3.2,<2026.0.0)",
    "rigour (>=0.10.1,<0.11.0)",
    "fsspec (>=2025.3.2,<2026.0.0)",
    "fingerprints (>=1.2.3,<2.0.0)",
]

[project.urls]
Homepage = "https://investigraph.dev"
Repository = "https://github.com/simonwoerpel/runpandarun"
Documentation = "https://docs.investigraph.dev/runpandarun"
Issues = "https://github.com/simonwoerpel/runpandarun/issues"

[project.scripts]
runpandarun = "runpandarun.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = ">=4.1,<7.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pre-commit = ">=3.6,<5.0"
flake8 = "^7.0.0"
ipdb = "^0.13.13"
pytest-xdist = "^3.4.0"
moto = "^5.0.9"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
